# ParallelComputerArchitecture

./: README.md
Project1/: run.txt  runme.sh
Project1/Proj1/: CMakeLists.txt  Proj1  main.c
Project1/Proj1OMP/: CMakeLists.txt  Proj1OMP  main.c
Project1/Proj1PT/: CMakeLists.txt  Proj1PT  main.c
Project2/: bench_i5-8600k.txt  bench_i7-4710hq.txt  lol.txt  runme.sh
Project2/Proj2MPI/: CMakeLists.txt  main.c
Project2/Proj2Ref/: CMakeLists.txt  main.c
Project2/Proj2SSE/: CMakeLists.txt  main.c  main.cpp
